--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "react-calendar",
-  "version": "1.0.0",
+  "name": "@teyostudios/react-calendar",
+  "version": "0.0.1-void",
   "description": "calendar for react",
   "author": "ElionTDA",
   "license": "MIT",
-  "repository": "TeyoStudios/react-calendar",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TeyoStudios/react-calendar.git"
+  },
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.js",
@@ -24,12 +27,13 @@
     "deploy": "gh-pages -d example/build"
   },
   "peerDependencies": {
-    "react": "^16.0.0"
+    "react": "^18.0.0"
   },
+
   "devDependencies": {
-    "microbundle-crl": "^0.13.10",
+    "microbundle-crl": "^0.13.11",
     "babel-eslint": "^10.0.3",
-    "cross-env": "^7.0.2",
+    "cross-env": "^7.0.3",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.7.0",
     "eslint-config-standard": "^14.1.0",
@@ -40,12 +44,12 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-standard": "^4.0.1",
-    "gh-pages": "^2.2.0",
+    "gh-pages": "^4.0.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.0.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.1"
+    "prettier": "^2.7.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1"
   },
   "files": [
     "dist"
